feat(allergens): :sparkles: add allergens (#23)
* feat(allergens): :sparkles: add allergens

* feat(allergens): :sparkles: implement allergens table

* turnoff automigrations

* import
